# passion-market

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.test.yml  docker-compose.yml
.claude/commands/: ddd-rust-architecte.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-workspace-cargo-et-environnement-docker-compose.md  1-2-application-nextjs-16-et-proxy-vers-lapi-rust.md  1-3-ci-github-actions-et-deploiement-railway.md  2-1-domaine-identity-user-role-et-credentials-tdd.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-28.md  prd.md  project-structure.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
crates/app-server/: Cargo.toml
crates/app-server/src/: config.rs  db.rs  health.rs  main.rs
crates/catalog-api/: Cargo.toml
crates/catalog-api/src/: lib.rs
crates/catalog-domain/: Cargo.toml
crates/catalog-domain/src/: lib.rs
crates/catalog-infra/: Cargo.toml
crates/catalog-infra/src/: lib.rs
crates/identity-api/: Cargo.toml
crates/identity-api/src/: lib.rs
crates/identity-domain/: Cargo.toml
crates/identity-domain/src/: domain_services.rs  errors.rs  events.rs  lib.rs  password_hash.rs  ports.rs  use_cases.rs  user.rs
crates/identity-domain/tests/: user_registration_test.rs
crates/identity-infra/: Cargo.toml
crates/identity-infra/src/: lib.rs
crates/order-api/: Cargo.toml
crates/order-api/src/: lib.rs
crates/order-domain/: Cargo.toml
crates/order-domain/src/: lib.rs
crates/order-infra/: Cargo.toml
crates/order-infra/src/: lib.rs
crates/payment-api/: Cargo.toml
crates/payment-api/src/: lib.rs
crates/payment-domain/: Cargo.toml
crates/payment-domain/src/: lib.rs
crates/payment-infra/: Cargo.toml
crates/payment-infra/src/: lib.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: errors.rs  events.rs  ids.rs  iso_date_time.rs  lib.rs  money.rs  pagination.rs
docs/: catalog-domain.md  compte-rendu-story-1-1.md  compte-rendu-story-1-2.md
frontend/: .gitignore  nx.json  package-lock.json  package.json  tsconfig.base.json
frontend/apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/apps/web/src/app/: layout.tsx  page.tsx
migrations/: 20260328000002_create_identity_schema.sql
