[package]
name = "identity-infra"
version.workspace = true
edition.workspace = true

[dependencies]
identity-domain = { workspace = true }
shared-kernel = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
lapin = { workspace = true }
