[package]
name = "order-api"
version.workspace = true
edition.workspace = true

[dependencies]
order-domain = { workspace = true }
shared-kernel = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# NE PAS dépendre de order-infra — injection via traits domaine (ports.rs)
